--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
+    "moment": "^2.22.2",
     "vue": "^2.5.16"
   },
   "devDependencies": {
