--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
+    "font-awesome": "^4.7.0",
     "moment": "^2.22.2",
     "vue": "^2.5.16"
   },
