--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "chart.js": "^2.7.2",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.7.3",
     "font-awesome": "^4.7.0",
-    "moment": "^2.22.2",
-    "vue": "^2.5.16"
+    "moment": "^2.24.0",
+    "vue": "^2.6.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.3",
-    "@vue/cli-service": "^3.0.0-rc.3",
-    "vue-template-compiler": "^2.5.16"
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
+    "vue-template-compiler": "^2.6.6"
   },
   "babel": {
     "presets": [
